[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
reqwest = "0.11.11"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.19.2", features = ["full"] }
