[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
anyhow = "1.0.58"
clap = { version = "3.2.8", features = ["derive", "env"] }
lockfree = "0.5.1"
num_cpus = "1.13.1"
reqwest = "0.11.11"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
tikv-jemallocator = "0.5.0"
tokio = { version = "1.19.2", features = ["full"] }
